CSS: fix fullscreen image
... messed up somewhere before. Works again now.

--- a/css/_slides.scss
+++ b/css/_slides.scss
@@ -65,7 +65,7 @@
             text-transform: none;
 	}
 
-	section {
+	section:not(.full-screen) {
             /* Margin percentages (e.g. 5%) are treated as being relative to the
             containing element's *width*, even the top and bottom margins. */
             margin: $section-top-margin / $aspect-ratio $section-left-margin;
@@ -81,14 +81,14 @@
             box-shadow: none;
         }
 
-        .full-screen {
+        section.full-screen {
             // True up section back to almost full slide dimensions.
             $fs-left-margin: 25px;
             // Need to keep margins with aspect ratio in order to avoid cropping.
             $fs-top-margin: $fs-left-margin / $aspect-ratio;
 
-            width: $slide-width;
-            height: $slide-height;
+            width: 100%;
+            height: 100%;
 
             margin: 0;
 
